--- a/theory/integration_perf/integration.tex
+++ b/theory/integration_perf/integration.tex
@@ -1,38 +1,78 @@
-\input{header}
+\documentclass[10pt]{article}
+
+\usepackage[english]{babel}
+\usepackage{setspace}
+\usepackage[T1]{fontenc}						%Europäischer Schriftsatz
+\usepackage{a4wide}					 				%Bessere Ausnutzung der DinA4 größe ohne Randbemerkungen, auch a4 möglich
+\usepackage[utf8]{inputenc}
+\usepackage{amssymb,amsmath}				%Mathe und Schriftsatz
+\usepackage{prettyref}
+\usepackage{bbm}
+\usepackage{txfonts}
+\usepackage[format=plain,margin=1.5cm,small]{caption} %Legenden: mergin versetzt beitseitig nach innen, format=plain verhindert einrücken (einfacher blocksatz)
+
+\usepackage[url=false,isbn=false,eprint=false,natbib=true,style=numeric]{biblatex}
+
+\usepackage[babel]{csquotes}
+\usepackage[hidelinks]{hyperref}  % unbedingt als letztes Paket laden
+
+% imaginary unit
+\newcommand{\imag}{i} % imaginary unit
+\newcommand{\e}{e}    % euler's number
+
+% real/imaginary part
+\renewcommand{\Re}{\mathrm{Re}}
+\renewcommand{\Im}{\mathrm{Im}}
+
+% TE, TM
+\newcommand{\TE}{\mathrm{TE}}
+\newcommand{\TM}{\mathrm{TM}}
+
+\newcommand{\Plm}[2]{{\text{P}_{#1}^{#2}}}
+
+\newcommand{\sep}{\quad}
+
+\newcommand{\F}{\ensuremath{\mathcal{F}}}
+
+\newcommand{\Id}{\mathbbm{1}}
+\newcommand{\qmax}{{q_\text{max}}}
+\newcommand{\lmax}{{\ell_\text{max}}}
+
+\renewcommand{\vec}[1]{{\mathbf{#1}}}
+
 
 \begin{document}
 
-\chapter{Integration for perfect reflectors}
+\section{Integration for perfect reflectors}
 
 We want to compute the integrals
 \begin{align}
 \label{eq:A}
-A_{\ell_1\ell_2,p}^{(m)}(\tau) &= (-1)^{\ell_2+m} \, r_p \, m^2 \, \e^{-\tau} \int_0^\infty \mathrm{d}z \, \frac{\e^{-\tau z}}{z^2+2z} \, \Plm{\ell_1}{m}(1+z) \Plm{\ell_2}{m}(1+z), \\
+A_{\ell_1\ell_2,p}^{(m)}(\tau) &= (-1)^{\ell_2+m} \, m^2 \, \e^{-\tau} \int_0^\infty \mathrm{d}z \, r_p \, \frac{\e^{-\tau z}}{z^2+2z} \, \Plm{\ell_1}{m}(1+z) \Plm{\ell_2}{m}(1+z), \\
 \label{eq:B}
-B_{\ell_1\ell_2,p}^{(m)}(\tau) &= (-1)^{\ell_2+m+1} \, r_p \, \e^{-\tau} \int_0^\infty \mathrm{d}z \, \e^{-\tau z} \, (z^2+2z) \, \Plm{\ell_1}{m}^\prime(1+z) \Plm{\ell_2}{m}^\prime(1+z), \\
+B_{\ell_1\ell_2,p}^{(m)}(\tau) &= (-1)^{\ell_2+m+1} \, \e^{-\tau} \int_0^\infty \mathrm{d}z \, r_p \, \e^{-\tau z} \, (z^2+2z) \, \Plm{\ell_1}{m}^\prime(1+z) \Plm{\ell_2}{m}^\prime(1+z), \\
 \label{eq:C}
-C_{\ell_1\ell_2,p}^{(m)}(\tau) &= \imag m (-1)^{\ell_2+m} \, r_p \, \e^{-\tau} \int_0^\infty \mathrm{d}z \, \e^{-\tau z} \, \Plm{\ell_1}{m}(1+z) \Plm{\ell_2}{m}^\prime(1+z), \\
+C_{\ell_1\ell_2,p}^{(m)}(\tau) &= \imag m (-1)^{\ell_2+m} \, \e^{-\tau} \int_0^\infty \mathrm{d}z \, r_p \, \e^{-\tau z} \, \Plm{\ell_1}{m}(1+z) \Plm{\ell_2}{m}^\prime(1+z), \\
 \label{eq:D}
 D_{\ell_1\ell_2,p}^{(m)}(\tau) &= (-1)^{\ell_1+\ell_2+1} C_{\ell_2\ell_1,p}^{(m)}
 \end{align}
 for perfect reflectors, where $\tau \equiv 2nT=2\xi$. The Fresnel coefficients
-$r_p$ are given by $r_\TM=-r_\TE=1$ and can be put in front of the integral. 
-The integrals \eqref{eq:A}--\eqref{eq:D} are identical to the integrals (6.11)--(6.14)
-in MASTERTHESIS after a change of variable $z = x/\tau$.
+for perfect reflectors, $r_\TM=-r_\TE=1$, are independent of $\vec k$ and
+can be pulled in front of the integration. The integrals \eqref{eq:A}--\eqref{eq:D}
+are identical to the integrals (6.11)--(6.14) in MASTERTHESIS after substitution $z = x/\tau$.
 
 Using Gaunt coefficients a product of associated Legendre polynomials can be
 expressed as a sum of associated Legendre polynomials:
 \begin{equation}
 \Plm{n}{m}(x) \Plm{\nu}{\mu}(x) = a_0 \sum_{q=0}^\qmax \tilde a_q  \Plm{n+\nu-2q}{m+\mu}(x)
 \end{equation}
-
 Every integral can be reduced to a sum of integrals of the type
 \begin{equation}
-\mathcal{J}_\nu^{2m}(\tau) = \int_0^\infty \, \mathrm{d}z \frac{\e^{-\tau x}}{z^2+2z} \Plm{\nu}{2m}\left(1+z\right).
+\mathcal{J}_\nu^{2m}(\tau) = \int_0^\infty \mathrm{d}z \, \frac{\e^{-\tau x}}{z^2+2z} \Plm{\nu}{2m}\left(1+z\right).
 \end{equation}
 
 
-\section{Integral $A_{\ell_1\ell_2,p}^{(m)}(\tau)$}
+\subsection{Integral $A_{\ell_1\ell_2,p}^{(m)}(\tau)$}
 
 \begin{align}
 \nonumber
@@ -43,7 +83,7 @@ A_{\ell_1\ell_2,p}^{(m)}(\tau) &= \overbrace{(-1)^{\ell_2+m} \, r_p \, m^2 \, \e
 \end{align}
 
 
-\section{Integral $B_{\ell_1\ell_2,p}^{(m)}(\tau)$}
+\subsection{Integral $B_{\ell_1\ell_2,p}^{(m)}(\tau)$}
 
 \begin{align}
 \nonumber
@@ -64,7 +104,7 @@ A_{\ell_1\ell_2,p}^{(m)}(\tau) &= \overbrace{(-1)^{\ell_2+m} \, r_p \, m^2 \, \e
 \end{align}
 
 
-\section{Integral $C_{\ell_1\ell_2,p}^{(m)}(\tau)$}
+\subsection{Integral $C_{\ell_1\ell_2,p}^{(m)}(\tau)$}
 
 \begin{align}
 \nonumber
@@ -78,7 +118,7 @@ A_{\ell_1\ell_2,p}^{(m)}(\tau) &= \overbrace{(-1)^{\ell_2+m} \, r_p \, m^2 \, \e
 \end{align}
 
 
-\section{Integral $\mathcal{J}_\nu^{2m}(\tau)$}
+\subsection{Integral $\mathcal{J}_\nu^{2m}(\tau)$}
 
 \begin{align}
 \nonumber
@@ -94,16 +134,16 @@ A_{\ell_1\ell_2,p}^{(m)}(\tau) &= \overbrace{(-1)^{\ell_2+m} \, r_p \, m^2 \, \e
 
 \appendix
 
-\chapter{Formulae}
+\section{Formulae}
 
-\section{Binomial coefficient}
+\subsection{Binomial coefficient}
 \begin{equation}
 \label{appendix:binom}
 \binom{-\alpha}{k} = (-1)^k \binom{\alpha+k-1}{k}
 \end{equation}
 
 
-\section{Legendre polynomials}
+\subsection{Legendre polynomials}
 
 \begin{equation}
 \label{appendix:Pn}
@@ -111,7 +151,7 @@ A_{\ell_1\ell_2,p}^{(m)}(\tau) &= \overbrace{(-1)^{\ell_2+m} \, r_p \, m^2 \, \e
 \end{equation}
 
 
-\section{Associated Legendre polynomials}
+\subsection{Associated Legendre polynomials}
 
 \begin{equation}
 \label{appendix:Plm}
