fix wrong integration variable in formula

--- a/theory/integration_perf/integration.tex
+++ b/theory/integration_perf/integration.tex
@@ -68,7 +68,7 @@ expressed as a sum of associated Legendre polynomials:
 \end{equation}
 Every integral can be reduced to a sum of integrals of the type
 \begin{equation}
-\mathcal{J}_\nu^{2m}(\tau) = \int_0^\infty \mathrm{d}z \, \frac{\e^{-\tau x}}{z^2+2z} \Plm{\nu}{2m}\left(1+z\right).
+\mathcal{J}_\nu^{2m}(\tau) = \int_0^\infty \mathrm{d}z \, \frac{\e^{-\tau z}}{z^2+2z} \Plm{\nu}{2m}\left(1+z\right).
 \end{equation}
 
 
