--- a/theory/README
+++ b/theory/README
@@ -1,6 +1,6 @@
 This directoy contains:
 
-thesis.pdf [en]: Master thesis
+thesis_orig.pdf [en]: Master thesis
 This is my master thesis and contains a derivation of the matrix elements of
 the scattering matrix and a detailed discussion on numerical issues.
 
