--- a/theory/integration/integration.tex
+++ b/theory/integration/integration.tex
@@ -91,7 +91,7 @@ Thus we can express the integral $\mathcal{I}_{\ell_1,\ell_2,p}^{m}$ as
 \end{equation}
 where we have defined
 \begin{equation}
-\mathcal{K}_{\nu,p}^m = \int_0^\infty \mathrm{d}z \, r_p \frac{\e^{-\tau z}}{z^2+2z} \Plm{\ell_1+\ell_2-2q}{2m}(1+z) \,.
+\mathcal{K}_{\nu,p}^m = \int_0^\infty \mathrm{d}z \, r_p \frac{\e^{-\tau z}}{z^2+2z} \Plm{\nu}{2m}(1+z) \,.
 \end{equation}
 The advantage is that for a scattering matrix $\mathcal{M}^m(\xi)$ we only have
 to evaluate $\mathcal{O}(\lmax)$ instead of $\mathcal{O}(\ell_\tmax^2)$
