work in progress

--- a/theory/integration/integration.tex
+++ b/theory/integration/integration.tex
@@ -143,7 +143,7 @@ k(z_\tmax) \approx \frac{(2\nu)!}{2^\nu \nu! (\nu-2m)!} \e^{-\tau z_\tmax} z_\tm
 For small values of $z$ we can approximate the integrand of
 $\mathcal{K}_{\nu,p}^m$ using \eqref{appendix:Plm_1}
 \begin{equation}
-k(z) = r_p \frac{\e^{-\tau z}}{z^2+2z} \Plm{\nu}{2m}(1+z) \overset{z \sim 1}{\approx} c \e^{-\tau z} z^m
+k(z) = r_p \frac{\e^{-\tau z}}{z^2+2z} \Plm{\nu}{2m}(1+z) \overset{z \ll 1}{\approx} c \e^{-\tau z} z^{m-1}
 \end{equation}
 where $c$ is a constant. The maximum of the integrand is approximately at $z_\tmax \approx m/\tau$ and the
 integrand at $z_\tmax$ is approximately
