add citation for gaunt coefficients

--- a/theory/integration/integration.tex
+++ b/theory/integration/integration.tex
@@ -100,7 +100,8 @@ with respect to $\ell_1$ and $\ell_2$
 \mathcal{I}_{\ell_1,\ell_2,p}^{m} = \mathcal{I}_{\ell_2,\ell_1,p}^{m} \,.
 \end{equation}
 
-Using Gaunt coefficients a product of associated Legendre polynomials can be expressed as a sum of associated Legendre polynomials
+Using Gaunt coefficients a product of associated Legendre polynomials can be
+expressed as a sum of associated Legendre polynomials \cite{gaunt}
 \begin{equation}
 \Plm{\ell_1}{m}(x) \Plm{\ell_2}{m}(x) = a_0 \sum_{q=0}^{q_\tmax} \tilde a_q \Plm{\ell_1+\ell_2-2q}{2m}(x) \,.
 \end{equation}
@@ -184,11 +185,15 @@ for $x\sim1$ they may be approximated by
 \addcontentsline{toc}{chapter}{Bibliography}
 
 
-\begin{thebibliography}{9}
+\begin{thebibliography}{99}
 
 \bibitem{hartmann}
   Michael Hartmann,
   \emph{Negative Casimir entropies in the plane–sphere geometry}, master thesis, 2014
+
+\bibitem{gaunt}
+  Yu-lin Xu,
+  \emph{Fast evaluation of Gaunt coefficients: recursive approach}, Journal of Computational and Applied Mathematics, 1997
 
 \end{thebibliography}
 
