--- a/theory/numerical_issues/numerical_issues.tex
+++ b/theory/numerical_issues/numerical_issues.tex
@@ -200,7 +200,7 @@ If the value of the determinant is small, one may also make use of the mercator 
 \begin{equation}
 \trace\log \mathcal{D} = \trace\log\left(\mathbbm{1}-\mathcal{M}\right) = \sum_{k=1}^\infty \frac{1}{k} \trace\mathcal{M}^k \,.
 \end{equation}
-If we just keep the
+The first two terms can be calculated in $\mathcal{O}(N^2)$ steps, where $N$ is the dimension of the round-trip matrix:
 \begin{equation}
 \trace\log\mathcal{D} = \trace\mathcal{M} + \frac{1}{2} \trace\mathcal{M}^2 + E \,.
 \end{equation}
